# E-Commerce-Django

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
api/: admin.py  filters.py  managers.py  models.py  permissions.py  serializers.py  service.py  signals.py  task.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_cart_cartitem_cart_products.py  0002_mptt_model_add.py  0002_user_role.py  0003_alter_category_level_alter_category_lft_and_more.py  0003_order_status_alter_orderitem_order.py  0004_rename_date_created_order_created_at_and_more.py  0004_user_is_deleted.py
ecommerce/: celery.py  settings.py  urls.py
ecommerce/settings/: dev.py  production.py  settings.py
